[package]
name = "cumulus-primitives-parachain-inherent"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# Substrate dependencies
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", optional = true }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", optional = true }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", optional = true }

# Selendra dependencies
selendra-client = { git = "https://github.com/selendra/selendrachain", optional = true, branch = "selendrav2" }

# Cumulus dependencies
cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
async-trait = { version = "0.1.42", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
tracing = { version = "0.1.22", optional = true }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	"scale-info/std",
	"cumulus-primitives-core/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-trie/std",
	"sp-std/std",
	"sp-state-machine",
	"tracing",
	"sp-runtime",
	"sc-client-api",
	"sp-api",
	"selendra-client",
]
