[package]
name = "indracore-runtime"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
description = "Selendra parachain runtime"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex-literal = { version = "0.3.4" }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, features = ["derive"] }
smallvec = "1.6.1"

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.16", default-features = false}
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }

node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }

# Cumulus dependencies
cumulus-pallet-aura-ext = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
cumulus-primitives-core = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false, version = "3.0.0"}
pallet-collator-selection = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
parachain-info = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
parachains-common = { path = "../common", default-features = false }

# Selendra dependencies
selendra-parachain = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
selendra-runtime-common = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
selendra-runtime-constants = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
xcm = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
xcm-builder = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
xcm-executor = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }
pallet-xcm = { git = "https://github.com/selendra/selendrachain", branch = "mainnet", default-features = false }

# Try-runtime stuff
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false, optional = true }

#Local pallet
pallet-bridge = { path = "../../pallets/bridge", default-features = false }
pallet-bridge-transfer = { path = "../../pallets/bridge_transfer", default-features = false }
pallet-vesting = { path = "../../pallets/vesting", default-features = false }
pallet-custom-signatures = { path = "../../pallets/custom-signatures", default-features = false }

# frontier
fp-rpc = { path = "../../vendors/frontier/primitives/rpc", default-features = false }
fp-self-contained = { path = "../../vendors/frontier/primitives/self-contained", default-features = false }

pallet-base-fee = { path = "../../vendors/frontier/frame/base-fee", default-features=false }
pallet-ethereum = { path = "../../vendors/frontier/frame/ethereum", default-features=false }
pallet-evm = { path = "../../vendors/frontier/frame/evm", default-features=false }
pallet-evm-precompile-bn128 = { path = "../../vendors/frontier/frame/evm/precompile/bn128", default-features=false }
pallet-evm-precompile-dispatch = { path = "../../vendors/frontier/frame/evm/precompile/dispatch", default-features=false }
pallet-evm-precompile-modexp = { path = "../../vendors/frontier/frame/evm/precompile/modexp", default-features=false }
pallet-evm-precompile-simple = { path = "../../vendors/frontier/frame/evm/precompile/simple", default-features=false }
pallet-evm-precompile-sha3fips = { path = "../../vendors/frontier/frame/evm/precompile/sha3fips", default-features=false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[features]
default = [ "std" ]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-assets/std",
	"pallet-authorship/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"pallet-asset-tx-payment/std",
	"pallet-collator-selection/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"sp-consensus-aura/std",
	"node-primitives/std",
	"parachains-common/std",
	
	"pallet-bridge/std",
	"pallet-bridge-transfer/std",
	"pallet-vesting/std",
	"pallet-custom-signatures/std",

	"fp-rpc/std",
    "fp-self-contained/std",
	"pallet-base-fee/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm-precompile-bn128/std",
    "pallet-evm-precompile-dispatch/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-sha3fips/std",
]
